# ROS2_mesh_server

./: README.md  uml.drawio
visual_obj_server/: CMakeLists.txt  package.xml
visual_obj_server/src/: myMashobj.h  visual_client.cpp  visual_server.cpp
visual_srv_msg/: CMakeLists.txt  package.xml
visual_srv_msg/srv/: ObjDir.srv
