<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>visual_obj_server</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="davidMl@unlimited-robotics.com">dor</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>visual_srv_msg</depend>
  <depend>rviz_visual_tools </depend>

  <depend>moveit_ros_planning_interface</depend>
 


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
